app/assets/stylesheets/zammad.scss
/* ... */
.btn + .btn {
  margin-left: 10px;
}

.btn + .btn.align-right {
  margin-left: auto;
}

.btn.align-right ~ .btn {
  margin-left: 15px;
}

.vertical > .btn + .btn {
  margin-left: 0;
  margin-top: 10px;
}

.btn--download .icon-download {
  margin-right: 6px;
  margin-top: 4px;
  margin-left: -10px;
  vertical-align: top;
  fill: white;
}

.btn-label {
  margin-left: 7px;
}

.visibility-change {
  /*
  
  Interactive Visibility Change Classes:
  
    <div class="visibility-change">
      <svg class="icon-marker" data-visible="active"><use xlink:href="#icon-marker" /></svg>
    </div>
    
    Important: HTML Order active > hover > normal

  */

  [data-visible=active],
  [data-visible=hover] {
    display: none;
  }

  &.is-active [data-visible=active] {
    display: block;
    
    & ~ [data-visible=normal] {
      display: none
    }
  }

  &:hover [data-visible=hover] {
    display: block;
    
    & ~ [data-visible=normal] {
      display: none
    }
  }
}

.buttonDropdown {
  display: flex;
  position: relative;
  user-select: none;
  
  .dropdown-menu {
    margin-bottom: 0;
  }
  
  &.is-open .dropdown-menu {
    display: block;
  }
}

.status-fields {
  display: flex;
}

.status-field {
  color: hsl(0,0%,60%);
  padding: 8px 10px 6px;
  border: 1px solid hsl(0,0%,90%);
  
  &:not(:last-child):not(:only-child) {
    border-right: none;
  }
  
  &:first-child {
    border-radius: 5px 0 0 5px;
  }
  
  &:last-child {
    border-radius: 0 5px 5px 0;
  }

  &:only-child {
    border-radius: 5px;
  }

  .badge {
    background: hsl(210,5%,77%);
  }
}

.badge {
  display: inline-block;
  min-width: 18px;
  padding: 3px 5px;
  font-size: 12px;
  font-weight: 500;
  line-height: 1;
  color: #fff;
  text-align: center;
  white-space: nowrap;
  vertical-align: top;
  border-radius: 9px;
  background: hsl(198,18%,86%);
  margin-right: 3px;
  flex-shrink: 0;

  &:empty {
    display: none;
  }

  &.badge--big {
    min-width: 22px;
    font-size: 14px;
    border-radius: 11px;
    padding: 5px 7px 3px;
  }

  &.badge--text {
    min-width: 0;
    padding: 0;
    margin-right: 5px;
    font-size: inherit;
    font-weight: normal;
    text-align: left;
    color: #d0d2d3;
    background: none;
    border-radius: 0;
  }
}


table {
  table-layout: fixed;
}

.table {
  display: table;
}

.table-fluid {
  table-layout: auto;
}

.table .table-row {
  display: table-row;
}

.table th:not(.noTruncate),
.table td:not(.noTruncate) {
  @extend .u-textTruncate;
}

.table > thead > tr > th {
  padding: 12px 9px 10px;
  border-bottom: none;
  border-top: 1px solid #ececec;
  background: #f0f1f2;
  color: #444a4f;
  font-weight: normal;
  font-size: 12px;
  text-transform: uppercase;
  letter-spacing: 0.05em;
}

.table > tbody > tr > td {
  padding: 11px 10px 7px;
  border: none;
  box-shadow: 0 1px rgba(0,0,0,.03);
}

.table-hover > tbody > tr:hover > td {
  background: white;
  box-shadow: 
    0 1px rgba(0,0,0,.03),
    0 -1px rgba(0,0,0,.03);
}
 
.table-hover > tbody > tr:hover > th {
  background: rgba(0,8,14,.015);
}

.table > thead:first-child > tr:first-child > th.no-padding,
.table > thead > tr > th.no-padding,
.table > tbody > tr > td.no-padding {
  padding: 0;
}

.table tr.is-inactive {
  opacity: 0.5;
  text-decoration: line-through;
  
  a {
    color: #bbb;
  }
}

.table .icon-trash {
  vertical-align: middle;
  fill: hsl(240,1%,77%);
}

.table .table-sort-arrow {
  opacity: 1;
  fill: hsl(206,7%,33%);
  width: 8px;
  height: 8px;
  margin-left: 3px;
  margin-top: -2px;
  vertical-align: middle;
}

.checkbox-replacement,
.radio-replacement {
  padding: 0;
  margin: 0;
  @extend .u-clickable;
  display: flex;
  align-items: center;
  justify-content: center;
}

.checkbox-replacement.checkbox-replacement--inline,
.radio-replacement.radio-replacement--inline {
  display: inline-flex;
  margin-right: 3px;
}

.checkbox-replacement input,
.checkbox-replacement input:not(:checked) ~ .icon-checked,
.checkbox-replacement input:checked ~ .icon-unchecked,
.radio-replacement input,
.radio-replacement input:not(:checked) ~ .icon-checked,
.radio-replacement input:checked ~ .icon-unchecked {
  display: none;
}

.checkbox-replacement + .label-text,
.radio-replacement + .label-text {
  margin-left: 0;
}

.table .checkbox-replacement,
.table .radio-replacement {
  height: 40px;
}

.table-overview tbody .icon-checkbox,
.table-overview tbody .icon-radio,
.table-overview tbody .icon-checkbox-checked,
.table-overview tbody .icon-radio-checked {
  fill: transparent;
}

.table .table-cell {
  vertical-align: top;
  display: table-cell;
  border-bottom: 1px solid #eeeeee;
}

.hero-two {
  width: 100%;
}
.hero-two .hero-left {
  width: 50%;
  float: left;
}
.hero-two .hero-right {
  width: 50%;
  float: right;
}

.panel-title {
  font-size: 14px;
}

#task {
  position: fixed;
  display: table;
  width: 100%;
  min-width: 1000px;
  top: 46px;
  display: none;
}

#task > .taskbar {
  display: table-row;
  z-index: 1040;
}

#task > .taskbar > div {
  padding: 0 4px 4px 4px;
  display: table-cell;
}

#task .task {
  @extend .u-textTruncate;
  max-width: 120px;
  display: inline-block;
}

#task .task > a,
#task .task > a:hover {
  color: #ffffff;
  text-decoration: none;
}

#task .btn-default .task > a,
#task .btn-default .task > a:hover {
  color: #333333;
}

#task .taskbar .btn-small {
  padding: 3px 8px 4px;
  margin-top: 2px;
  font-size: 11px;
  font-weight: 300;
}

#task .taskbar .btn-default {
  background-color: #c3c3c3;
  border-color: #c3c3c3;
}

#task [data-type="close"] {
  margin-left: 5px;
  font-size: 13px;
  top: 1px;
}

#task .taskbar-items {
}

#task .taskbar-new {
  text-align: right;
  padding-right: 12px;
}

.max-size-scroll {
  max-height: 240px;
  overflow-y: scroll;
}

/*
#content > *:not(.active) {
  display: none !important;
}
*/

h1, h2, h3, h4, h5, h6 {
  font-weight: normal;
  color: hsl(202,8%,28%);
}

h1 {
  font-size: 23px;
  line-height: 29px;
}
/* ... */

